# citizen-benefits

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  agents-cli-manifest.yaml  build.js  kaggle-writeup.md  package.json  pyproject.toml
artifacts/grade_results/: results_20260704_174944.html  results_20260704_174944.json  results_20260704_175017.html  results_20260704_175017.json  results_20260704_175204.html  results_20260704_175204.json  results_20260704_175419.html  results_20260704_175419.json  results_20260704_175512.html  results_20260704_175512.json
specs/: citizenbenefits_spec.md
src/citizenbenefits/: __init__.py  agent.py  grounding_fixtures.json  nodes.py  schemas.py  tools.py  web.py
src/citizenbenefits/skills/program-eitc/: SKILL.md
src/citizenbenefits/skills/program-liheap/: SKILL.md
src/citizenbenefits/skills/program-medicaid-chip/: SKILL.md
src/citizenbenefits/skills/program-snap/: SKILL.md
src/citizenbenefits/skills/program-wic/: SKILL.md
src/citizenbenefits/static/: index.html
src/citizenbenefits/static/assets/css/: styles.css  styles.min.css
src/citizenbenefits/static/favicons/: browserconfig.xml  site.webmanifest
src/citizenbenefits/static/lang/: de.json  en.json  es.json  fr.json
tests/: conftest.py  test_debug.py  test_eligibility.py  test_live_grounding.py  test_pii_guard.py  test_router.py  test_status_gate.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: eval_dataset.json
tests/fixtures/: eitc_landing.html  eitc_tables.html  snap_page.html  wic_faqs.html  wic_page.html
(+2 files in other folders)
